objects/SN_ESI_Values_del__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>It will use in ESC_ServiceNowStagingHelper class for integration values</description>
    <fields>
        <fullName>AuditResult__c</fullName>
        <label>AuditResult</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedComment__c</fullName>
        <label>FeedComment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Attached__c</fullName>
        <label>Quote Attached</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAJustification__c</fullName>
        <label>SLAJustification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceLink__c</fullName>
        <label>SourceLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Status__c</fullName>
        <label>Staging Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assignmentGroup__c</fullName>
        <label>assignmentGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessArea__c</fullName>
        <label>BusinessArea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseNumber__c</fullName>
        <label>CaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extensibleAttributes__c</fullName>
        <label>ExtensibleAttributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quoteNumber__c</fullName>
        <label>QuoteNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reportKey__c</fullName>
        <label>ReportKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requestType__c</fullName>
        <label>RequestType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sourceSystem__c</fullName>
        <label>SourceSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemIdentifier__c</fullName>
        <label>SystemIdentifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SN ESI  Values</label>
</CustomObject>